app/assets/stylesheets/components/_data-map.scss
.c-data-map {
  height: 100%;
  position: relative;
  > .toolbar {
    position: absolute;
    top: $navbar-height-small;
    left: 0;
    height: calc(100% - #{$navbar-height-small});
    width: 100%;
    background-color: $color-5;
    overflow: auto;
    z-index: 1;
    transform: translateX(-100%);
    transition: transform 0.3s ease-out;

    @media #{$mq-tablet} {
      width: 350px;
      background-color: rgba($color-5, 0.9);
    }

    > .actions {
      position: absolute;
      top: 16px;
      right: -30px;
      background-color: $color-7;
      > div {
        display: block;
        width: 30px;
        height: 30px;
        padding: 0;
        background-color: $color-7;
        border: none;
        outline: none;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;

        >.toggle-status {
          @include hamburger-icon(10px, 2px, 2px, 1px, $color-5, $color-4);
        }
      }
    }

    > .content {
      padding: 1rem;
      > .layer {
        margin: 15px 0;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        > .title {
          margin-left: 8px;
          font-size: $font-size-small;
          font-family: $font-family-1;
        }
      }
    }

    > .actions-mobile {
      display: flex;
      align-items: center;
      justify-content: center;
      @media #{$mq-tablet} {
        display: none;
      }
    }

    &.-open {
      transform: translateX(0);
    }
  }
  > .map {
    height: 100%;
  }
  .leaflet-top {
    top: 50px;
    z-index: 0;
  }
  .leaflet-control-zoom {
    box-shadow: none;
    a, a:hover {
      width: 30px;
      height: 30px;
      margin-bottom: 2px;

      font-size: $font-size-medium;
      -webkit-font-smoothing: subpixel-antialiased;
      text-indent: -99999px;

      border: none;
      border-radius: 0;
      background-color: rgba($color-7, 0.9);
    }
    .leaflet-control-zoom-in {
      position: relative;
      border-radius: 0;

      &:before,
      &:after {
        content: "";
        position: absolute;
        background-color: $color-5;
        transition: background-color 0.1s ease-in;
      }

      &:before {
        top: 10px;
        left: 14px;
        width: 2px;
        height: 10px;

      }
      &:after {
        top: 14px;
        left: 10px;
        width: 10px;
        height: 2px;
      }
      &:hover:before, &:hover:after {
        background-color: $color-4;
      }
    }
    .leaflet-control-zoom-out {
      position: relative;
      border-radius: 0;

      &:after {
        content: "";
        position: absolute;
        top: 14px;
        left: 10px;
        width: 10px;
        height: 2px;

        background-color: $color-5;
        transition: background-color 0.1s ease-in;
      }
      &:hover:after {
        background-color: $color-4;
      }
    }
  }
}

